<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="5"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_dictionary"
        android:orderInCategory="10"
        android:title="@string/dictionary"
        android:icon="@drawable/ic_dictionary"
        app:showAsAction="ifRoom|ifRoom" />

    <item
        android:id="@+id/action_all_notes"
        android:orderInCategory="20"
        android:title="@string/all_notes"
        android:icon="@drawable/ic_note_stack"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_all_homework"
        android:orderInCategory="30"
        android:title="@string/all_homework"
        android:icon="@drawable/ic_assignment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/action_about"
        android:icon="@drawable/ic_info"
        app:showAsAction="never" />
</menu>